User permissions, Runtime Database Routing and testing (#3)
* Adapter folder

+ Generate test data

* Implement JSON login and session cookie hardening

Replaces controller-based login/logout with a JSON-based authentication filter to allow Spring Security to manage session fixation protection and SecurityContext persistence.

* Enable JDBC session schema initialization

Changed spring.session.jdbc.initialize-schema from 'never' to 'always' to ensure the session schema is initialized automatically. This helps prevent issues related to missing session tables in the docker image.

* Implement multi-database routing and Authorization

+ Added support for routing between prod and historic databases using a new DataViewContext, ViewRoutingDataSource, and related configuration and filters.
+ Updated authorization to use string-based roles, modules, and submodules, and refactored user details and queries accordingly.
+ Adjusted SQL scripts and repository queries to match new authority naming conventions and removed unused fields.

* Add tests; improve user auth, service & SQL

Bump Spring Boot parent to 4.0.2 and add test dependencies (spring-boot-starter-test, data-jpa test, Testcontainers).

Add Data JPA and unit tests for users (UserRepositoryTest, UserServiceTest) and configure Testcontainers JDBC URL for integration tests.

Introduce core.datasource package marker (@NamedInterface) and allow security module to depend on core::datasource via ApplicationModule config.

Change default user listing page size from 50 to 10 in UserController.

Make UserService.modifyUser more robust: early-return when roles/modules/submodules are missing, treat empty id strings, and preserve existing fields before saving.

Harden UserAuthQueryImpl by returning empty lists for null role/module/submodule collections to avoid NPEs.

Fix SQL filtering in UserRepository to lowercase the search parameter in username comparison (use LOWER(:username)).

* Update data-postgres.sql

Change of initial