@@ -1,5 +1,6 @@
-package com.dossantosh.springfirstmodulith.users.infrastructure;
+package com.dossantosh.springfirstmodulith.users.infrastructure.adapters;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -11,7 +12,8 @@ import com.dossantosh.springfirstmodulith.users.infrastructure.projections.UserA
 import com.dossantosh.springfirstmodulith.users.infrastructure.repos.UserRepository;
 
 /**
- * Default implementation of {@link UserAuthQuery} backed by {@link UserRepository}.
+ * Default implementation of {@link UserAuthQuery} backed by
+ * {@link UserRepository}.
  */
 @Component
 class UserAuthQueryImpl implements UserAuthQuery {
@@ -36,13 +38,12 @@ class UserAuthQueryImpl implements UserAuthQuery {
                 p.getPassword(),
                 Boolean.TRUE.equals(p.getEnabled()),
                 Boolean.TRUE.equals(p.getIsAdmin()),
-                nullSafe(p.getRoles()),
-                nullSafe(p.getModules()),
-                nullSafe(p.getSubmodules())
-        );
+                emptyIfNull(p.getRoles()),
+                emptyIfNull(p.getModules()),
+                emptyIfNull(p.getSubmodules()));
     }
 
-    private List<Long> nullSafe(List<Long> value) {
-        return value == null ? List.of() : value;
+    private List<String> emptyIfNull(List<String> list) {
+        return list == null ? Collections.emptyList() : list;
     }
 }
